# bestfit

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  bestfit.spec  config.h.in  configure  configure.ac
debian/: changelog  control  copyright  rules
src/: Makefile.am  Makefile.in  bestfit.1  bestfit.c  bestfit.h  knapsack.c  sizescan.c  support.c  support.h
